--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -3,94 +3,88 @@
 {% load listutil %}
 {% load easy_thumbnails %}
 {% load hitcount_tags %}
+{% load static %}
+{% load sekizai_tags %}
 
 {% block more_head %}
 <link rel="alternate" type="application/rss+xml" href="/feed/" title="RSS feed">
+
+{% addtoblock "css" %}
+    <!--
+    <link href="{% static "css/frontpage.css" %}" rel="stylesheet">
+    -->
+{% endaddtoblock %}
 {% endblock %}
 
-{% block content %}
-{% with main_news as news %}
-<article>
-    <div class="box {{ news.content_type.model }}">
-        {% if news.cropping and news.picture %}
-            <a href="{{ news.get_absolute_url }}">
-                <img alt="" class="img-responsive"
-                     src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True quality=95 detail=True %}" height="100%" width="100%">
-            </a>
-        {% elif news.picture %}
-            <a href="{{ news.get_absolute_url }}">
-                <img alt="" class="img-responsive"
-                     src="{% thumbnail news.picture 760x300 quality=95 upscale=True crop="smart" detail=True %}" height="100%" width="100%">
-            </a>
-        {% endif %}
-        <header>
-            <h2>
-                <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
-            </h2>
-        </header>
-        <p>{{ news.lead_paragraph}}</p>
+
+{% block main %}
+<div class="maingrid-container"><!--main grid container open tag-->
+<!--main content begin-->
+
+    <div class="main-article">
+        <!--main article-->
+        {% with main_news as news %}
+        <article>
+            <div class="box {{ news.content_type.model }}">
+                {% if news.cropping and news.picture %}
+                    <a href="{{ news.get_absolute_url }}">
+                        <img alt="" class="img-responsive"
+                             src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True quality=95 detail=True %}" height="100%" width="100%">
+                    </a>
+                {% elif news.picture %}
+                    <a href="{{ news.get_absolute_url }}">
+                        <img alt="" class="img-responsive"
+                             src="{% thumbnail news.picture 760x300 quality=95 upscale=True crop="smart" detail=True %}" height="100%" width="100%">
+                    </a>
+                {% endif %}
+                <header>
+                    <h2>
+                        <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
+                    </h2>
+                </header>
+                <p>{{ news.lead_paragraph}}</p>
+            </div>
+        </article>
+        {% endwith %}
     </div>
-</article>
-{% endwith %}
 
-<div class="well">
-    {% include "includes/event_widget.html" %}
-</div>
+    <div class="upcomming-events well">
+        <!--upcomming event widget-->
+        {% include "includes/event_widget.html" %}
+    </div>
 
+    <div class="more-news-row1">
+        <!--nyheter21-->
+        {% for news in news_list_1 %}
+            {% include "includes/article_widget.html" %}
+        {% endfor %}
+    </div>
 
-<div class="row row-same-height">
-    {% for news in news_list_1 %}
-        {% include "includes/article_widget.html" %}
-    {% endfor %}
-</div>
+    <div class="more-news-row2">
+        <!--nyheter21-->
+        <style>
+            .news-row{
+                display: flex;
+            }
+            .button{
+                width: 100%;
+                padding: 5px;
+            }
+        </style>
 
-<div class="row row-same-height">
-    {% for news in news_list_2 %}
-        {% include "includes/article_widget.html" %}
-    {% endfor %}
-</div>
+        <div class="news-row">
+        {% for news in news_list_2 %}
+            {% include "includes/article_widget.html" %}
+        {% endfor %}
+        </div>
 
-<style>
-    .button{
-        display: block;
-        text-align: center;
-        line-height: 40px;
-        border-radius: 5px;
-        background-color: #f0f0f0;
-        color: black;
-        margin: 10px;
-        height: 40px;
-    }
+        <button onclick="location.href="{% url "news_list" %}"" type="button" class="button">Flere nyheter</button>
+    </div>
 
-    .button:hover{
-        background-color: #cfcfcf;
-        color: black;
-    }
-</style>
-
-<a href="{% url "news_list" %}" class="button">Flere nyheter</a>
-
-<style>
-    .nav-tabs{
-        display: flex;
-    }
-    .nav-tabs li {
-        display: flex;
-        flex: 1;
-    }
-    .nav-tabs li  a {
-        flex: 1;
-    }
-</style>
-
- <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#Nablad">Nablad</a></li>
-  <li><a data-toggle="tab" href="#Podcast">Skråttcast</a></li>
-</ul>
-
-<div height=300px class="well">
-    <div class="tab-content fixed-tab-height">
-        <div  id="Nablad" class="tab-pane fade in active">
+    <div class="latest-nablad well">
+        <!--Siste Nablad-->
+        {% if nablad_list %}
+        <div height=300px>
             <h3><a href="{% url "nablad_list" %}">Siste Nablad</a></h3>
             <div class="row">
                 {% for nablad in new_nablad %}
@@ -102,56 +96,80 @@
                 {% endfor %}
             </div>
         </div>
-        <div id="Podcast" class="tab-pane fade">
-            <h3><a href="{% url "season_view" %}">Nyeste Skråttcast</a></h3>
-            <div class="row">
-                {% for podcast in new_podcast_list %}
-                    <div class="col-md-3{% if not forloop.first %} hidden-xs{% endif %}">
-                        <a class="thumbnail" href="{{ podcast.get_absolute_url }}">
-                            {% if podcast.image %}
-                                <img src="{% thumbnail podcast.image 350x350 crop="square" %}" alt="{{ podcast.title }}">
-                            {% endif %}
-                            {% if podcast.short_title %}
-                                {{ podcast.short_title }}
-                            {% endif %}
-
-                        </a>
-                    </div >
-                {% endfor %}
-            </div>
-        </div>
+        {% else %}
+            <h1>Siste utgave av Nabladet</h1>
+            <h4>...vil dukke opp her når det kommer!</h4>
+        {% endif %}
     </div>
-</div>
 
-{% if frontpageinfo %}
+    <div class="sponsors">
+        <!--Sponsorer-->
+        {% if frontpageinfo %}
+            <p>
+                {{ frontpageinfo.content | markdown:"unsafe" }}
+            </p>
+        {% endif %}
+    </div>
+<!--main content-->
+
+<!--Sidebar begin-->
+    <div class="welcome well">
+        <h1>Velkommen til Nabla</h1>
         <p>
-            {{ frontpageinfo.content | markdown:"unsafe" }}
+            Nabla er linjeforeningen for ved studenter sivilingeniørstudiet Fysikk og Matematikk ved NTNU, og har 
+            som formål å være en sosial arena, i tillegg til å fremme studentenes faglige interesser. Gjennom året
+            arrangerer Nabla et mangfold av ulike arrangementer, og har 25 ulike undergrupper som studentene kan 
+            bli med og engasjere seg i.
         </p>
-    {% endif %}
-{% endblock content %}
+        <h4>Ny student?</h4>
+        <p>
+            Les vår informasjon for nye studenter <a href="/nystudent/">her.</a>
+        </p>
+        <h4>Bedrift?</h4>
+        <p>
+            Ta kontakt med bedriftskontakten på <a href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no.</a>
+        </p>
+    </div>
 
+    <div class="office">
+        <!--Kontoret-->
+        {% include "officeCalendar/includes/list.html" %}
+    </div>
 
-{% block sidebar %}
-    {% include "poll/poll_include.html" %}
-<br />
-<br />
-{% include "officeCalendar/includes/list.html" %}
+    <div class="poll">
+        <!--Poll-->
+        {% include "poll/poll_include.html" %}
+    </div>
 
-    {% if sidebarinfo %}
+    <div class="latest-podcast well">
+        <!--Siste Skråttcast-->
+        {% if new_podcast %} 
+            <a href="{{ new_podcast.get_absolute_url }}">
+                {% if new_podcast.image %}
+                    <img src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
+                {% endif %}
+            </a>
+           <p><i>Dato: {{ new_podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {% get_hit_count for new_podcast %}</i></p>
+        {% else %}
+            <h1>Siste Skråttcast</h1>
+            <h4>...vil dukke opp her når den kommer!</h4>
+        {% endif %}
+    </div>
+
+    <div class="suggestions">
+        <!--Send inn ellernoe?-->
+        {% if sidebarinfo %}
             <p>
                 {{ sidebarinfo.content | markdown:"unsafe" }}
             </p>
         {% endif %}
+    </div>
+<!--sidebar end-->
 
-    <h2>Nyeste Skråttcast</h2>
-    {% if new_podcast %}
-        <a href="{{ new_podcast.get_absolute_url }}">
-            {% if new_podcast.image %}
-                <img src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
-            {% endif %}
-        </a>
-       <p><i>Dato: {{ new_podcast.pub_date | date:"d.m.Y" }}. Antall visninger: ca. {% get_hit_count for new_podcast %}</i></p> 
-    {% endif %}
+</div><!--main grid container close tag-->
+{% endblock main %}
 
-{% endblock sidebar %}
+
+
+
 
