Moves styling from template to stylehseet (default.css)

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
         {% endblock %}
     </head>
 
-    <body style="background-color: #fafafa; margin-top: 0px;">
+    <body>
 
 <!-- Pop up window displaying important information about the 'fadderperiode' -->
     {% if newuser_popup %}
@@ -255,7 +255,7 @@
         </header>
 
         <!-- Page Content -->
-        <div class="container box" id = "mainContent" style="padding: 100px 20px 10px 20px; background-color: white; margin-bottom: 0px;">
+        <div class="container box" id = "mainContent">
 
             {% bootstrap_messages %}
             {% block main %}
