--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,6 +1,7 @@
 /* MAIN */
 body {
-  margin-top: 80px;
+  background-color: #fafafa;
+  margin-top: 0px;
 }
 
 ul.nav.nav-list>li {
@@ -14,6 +15,7 @@ padding: 7px;
 nav.navbar {
     background: #222222;
     box-shadow: 0px 0px 10px black;
+    height: 70px;
 }
 .navbar .nav>li>a {
     text-shadow: 0 1px 0 #000;
@@ -395,5 +397,8 @@ Overflow-x: hidden;
 
 #mainContent {
   flex: 1;
+  padding: 100px 20px 10px 20px;
+  background-color: white;
+  margin-bottom: 0px;
 }
 
