--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -83,19 +83,19 @@
 
     <div class="latest-nablad well">
         <!--Siste Nablad-->
-        {% if nablad_list %}
-        <div height=300px>
-            <h3><a href="{% url "nablad_list" %}">Siste Nablad</a></h3>
-            <div class="row">
-                {% for nablad in new_nablad %}
-                    <div class="col-md-3{% if not forloop.first %} hidden-xs{% endif %}">
-                        <a class="thumbnail" href="{{ nablad.get_absolute_url }}">
-                            <img src="{% thumbnail nablad.thumbnail 730x200 %}">
-                        </a>
-                    </div >
-                {% endfor %}
+        {% if new_nablad %}
+            <div height=300px>
+                <h3><a href="{% url "nablad_list" %}">Siste Nablad</a></h3>
+                <div class="row">
+                    {% for nablad in new_nablad %}
+                        <div class="col-md-3{% if not forloop.first %} hidden-xs{% endif %}">
+                            <a class="thumbnail" href="{{ nablad.get_absolute_url }}">
+                                <img src="{% thumbnail nablad.thumbnail 730x200 %}">
+                            </a>
+                        </div >
+                    {% endfor %}
+                </div>
             </div>
-        </div>
         {% else %}
             <h1>Siste utgave av Nabladet</h1>
             <h4>...vil dukke opp her når det kommer!</h4>
@@ -144,6 +144,7 @@
     <div class="latest-podcast well">
         <!--Siste Skråttcast-->
         {% if new_podcast %} 
+            <h1>Siste Skråttcast</h1>
             <a href="{{ new_podcast.get_absolute_url }}">
                 {% if new_podcast.image %}
                     <img src="{{ new_podcast.image.url }}" alt="{{ new_podcast.title }}" style="max-width: 100%;"/>
