Fix quotation mark error in template

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -78,7 +78,7 @@
         {% endfor %}
         </div>
 
-        <button onclick="location.href="{% url "news_list" %}"" type="button" class="button">Flere nyheter</button>
+        <button onclick="location.href='{% url "news_list" %}'" type="button" class="button">Flere nyheter</button>
     </div>
 
     <div class="latest-nablad well">
