--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -21,32 +21,28 @@
 <div class="maingrid-container"><!--main grid container open tag-->
 <!--main content begin-->
 
-    <div class="main-article">
+    <article class="main-article box {{ news.content_type.model }}">
         <!--main article-->
         {% with main_news as news %}
-        <article>
-            <div class="box {{ news.content_type.model }}">
-                {% if news.cropping and news.picture %}
-                    <a href="{{ news.get_absolute_url }}">
-                        <img alt="" class="img-responsive"
-                             src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True quality=95 detail=True %}" height="100%" width="100%">
-                    </a>
-                {% elif news.picture %}
-                    <a href="{{ news.get_absolute_url }}">
-                        <img alt="" class="img-responsive"
-                             src="{% thumbnail news.picture 760x300 quality=95 upscale=True crop="smart" detail=True %}" height="100%" width="100%">
-                    </a>
-                {% endif %}
-                <header>
-                    <h2>
-                        <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
-                    </h2>
-                </header>
-                <p>{{ news.lead_paragraph}}</p>
-            </div>
-        </article>
+        {% if news.cropping and news.picture %}
+        <a href="{{ news.get_absolute_url }}">
+            <img alt="" class="img-responsive"
+                 src="{% thumbnail news.picture 760x300 box=news.cropping upscale=True quality=95 detail=True %}" height="100%" width="100%">
+        </a>
+        {% elif news.picture %}
+        <a href="{{ news.get_absolute_url }}">
+            <img alt="" class="img-responsive"
+                 src="{% thumbnail news.picture 760x300 quality=95 upscale=True crop="smart" detail=True %}" height="100%" width="100%">
+        </a>
+        {% endif %}
+        <header>
+            <h2>
+                <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
+            </h2>
+        </header>
+        <p>{{ news.lead_paragraph}}</p>
         {% endwith %}
-    </div>
+    </article>
 
     <div class="upcomming-events well">
         <!--upcomming event widget-->
