--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -44,8 +44,8 @@
         {% endwith %}
     </article>
 
-    <div class="upcomming-events well">
-        <!--upcomming event widget-->
+    <div class="upcoming-events well">
+        <!--upcoming event widget-->
         {% include "includes/event_widget.html" %}
     </div>
 
