Added link to GitHub in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -321,6 +321,7 @@
                         Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
                         <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
                         </p>
+
                     </div>
                     {# end om nabla #}
 
@@ -333,7 +334,10 @@
                         <a href="https://www.facebook.com/nablantnu/" class="fa fa-facebook fa-4x social-icon"></a>
                         <a href="https://www.instagram.com/nablalinjeforening/" class="fa fa-instagram fa-4x social-icon"></a>
                         <a href="https://nablantnu.slack.com/" class="fa fa-slack fa-4x social-icon"></a>
+                        <a href="https://github.com/Nabla-NTNU/nablaweb" class="fa fa-github fa-4x social-icon"></a>
                     </div>
+
+
 
             </div>
             </div>
