Added link to GitHub in footer (#336)
* Added link to GitHub in footer

* Got rid of random spaces in HTML

--- a/templates/base.html
+++ b/templates/base.html
@@ -333,8 +333,8 @@
                         <a href="https://www.facebook.com/nablantnu/" class="fa fa-facebook fa-4x social-icon"></a>
                         <a href="https://www.instagram.com/nablalinjeforening/" class="fa fa-instagram fa-4x social-icon"></a>
                         <a href="https://nablantnu.slack.com/" class="fa fa-slack fa-4x social-icon"></a>
+                        <a href="https://github.com/Nabla-NTNU/nablaweb" class="fa fa-github fa-4x social-icon"></a>
                     </div>
-
             </div>
             </div>
         </footer>
