--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -7,8 +7,9 @@
     grid-template-areas:
         "main-article    main-article    welcome"
         "upcoming-events upcoming-events office"
-        ".               .               poll"
-        ".               .               latest-podcast"
+        "more-news-1     more-news-2     poll"
+        "more-news-3     more-news-4     latest-podcast"
+        ".               more-news-btn   ."
         "latest-nablad   latest-nablad   suggestions"
         "sponsors        sponsors        .";
 }
@@ -35,15 +36,26 @@
     margin: 0;
     grid-area: main-article;
 }
-.more-news-row1{
-    grid-column: 1 / span 2;
-    grid-row: 3 / span 1;
+
+.more-news-1 {
+    grid-area: more-news-1;
 }
 
-.more-news-row2{
-    grid-column: 1 / span 2;
-    grid-row: 4 / span 1;
-    flex-direction: column;
+.more-news-2 {
+    grid-area: more-news-2;
+}
+
+.more-news-3 {
+    grid-area: more-news-3;
+}
+
+.more-news-4 {
+    grid-area: more-news-4;
+}
+
+.more-news-btn {
+    grid-area: more-news-btn;
+    grid-gap: 0;
 }
 
 .welcome {
