--- a/nablapps/news/templates/news/news_list.html
+++ b/nablapps/news/templates/news/news_list.html
@@ -17,18 +17,12 @@
  .news-list {
      display: grid;
      grid-template-columns: 1fr 1fr;
-     grid-template-rows: repeat(auto-fit, 15px auto);
+     grid-template-rows: repeat(4, 15px auto);
      grid-column-gap: 15px;
      grid-template-areas:
          "more-news-1 ."
          "more-news-1 more-news-2"
          ".           more-news-2";
- }
-
- @-moz-document url-prefix() { /* Firefox does not support the auto-fit */
-     .news-list {
-         grid-template-rows: repeat(4, 15px auto); /* 4 because we show 8 items in two columns */
-     }
  }
 
  .news {
