--- a/templates/includes/event_widget.html
+++ b/templates/includes/event_widget.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-md-6">
-        <h3>Arrangementer</h3>
+        <h3> <a href="https://nabla.no/arrangement/">Arrangementer</a> </h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" %}
     </div>
     <div class="col-md-6">
-        <h3>Bedriftpresentasjon</h3>
+        <h3> <a href="https://nabla.no/arrangement/">Bedriftpresentasjon</a></h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_bedpreses class="c-bedpres"%}
     </div>
 </div>
