Updates front page grid

--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -11,7 +11,7 @@
         "more-news-3     more-news-4     latest-podcast"
         ".               more-news-btn   ."
         "latest-nablad   latest-nablad   suggestions"
-        "sponsors        sponsors        .";
+        "sponsors        sponsors        sponsors";
 }
 
 @media (max-width: 1000px){
