--- a/nablapps/nablaforum/templates/nablaforum/channel.html
+++ b/nablapps/nablaforum/templates/nablaforum/channel.html
@@ -14,6 +14,10 @@
 <h1>Tråder i kanalen: {{ channel }}</h1>
 <a href="{% url "forum-index" %}">Tilbake til alle kanaler</a>
 
+<p>
+{{ channel.description }}
+</p>
+
 <ul>
 {% for thread in threads %}
     <a href="{% url "thread-view" channel_id=channel_id thread_id=thread.pk %}"><li class="thread box"><h4>{{ thread }}</h4></li></a>
