--- a/templates/base.html
+++ b/templates/base.html
@@ -200,6 +200,7 @@
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
+                                    <li><a href="{% url "forum-index" %}">Nablaforum</a></li>
                                     <li><a href="{% url "member_profile" user.username %}">Vis profil</a></li>
                                     <li><a href="{% url "edit_profile" %}">Endre profil</a></li>
                                     <li><a href="{% url "password_change" %}">Endre passord</a></li>
