--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -1,7 +1,6 @@
 .maingrid-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(6, auto);
     grid-gap: 20px;
     align-items: stretch;
     grid-template-areas:
@@ -16,8 +15,22 @@
 
 @media (max-width: 1000px){
     .maingrid-container{
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: 1fr ;
+        grid-template-areas:
+        "main-article   "
+        "upcoming-events "
+        "welcome"
+        "more-news-1"
+        "more-news-2"
+        "more-news-3"
+        "more-news-4"
+        "more-news-btn "
+        "office"
+        "latest-nablad"
+        "latest-podcast"
+        "poll"
+        "suggestions"
+        "sponsors";
     }
     .more-news-row2{
         display: block;
