--- a/static/css/front_page.css
+++ b/static/css/front_page.css
@@ -23,8 +23,6 @@
         "more-news-1"
         "more-news-2"
         "more-news-3"
-        "more-news-4"
-        "more-news-btn "
         "office"
         "latest-nablad"
         "latest-podcast"
@@ -32,12 +30,10 @@
         "suggestions"
         "sponsors";
     }
-    .more-news-row2{
-        display: block;
-        grid-column: 1 / span 2;
-        grid-row: 4 / span 1;
-    }
-
+    .more-news-3 {display:none}
+    .more-news-4 {display:none}
+    .more-news-btn{display:none}
+    .suggestions {display:none}
 }
 
 .well{
