Mark expired adverts as [Utløpt]

--- a/nablapps/jobs/templates/jobs/below_ad_include.html
+++ b/nablapps/jobs/templates/jobs/below_ad_include.html
@@ -3,6 +3,6 @@
 <h3>Nyeste stillingsannonser</h3>
 <ul>
 {% for job in jobs %}
-<li>{{job.headline}} hos {{job.company.name}} <em>(lagt inn {{job.created_date}})</em></li>
+<li>{{job.print_headline}} hos {{job.company.name}} <em>(lagt inn {{job.created_date}})</em></li>
 {% endfor %}
 </ul>
